load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "chromed_lib",
    srcs = ["chromed.go"],
    importpath = "github.com/albertocavalcante/chromed",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "chromed",
    embed = [":chromed_lib"],
    visibility = ["//visibility:public"],
)
